fix for bug #1946: "You can always mysql_real_query a query with placeholders after mysql_prepare()"