sql/sql_prepare.cc
@@ -785,7 +785,6 @@ static bool parse_prepare_query(PREP_STMT *stmt,
   mysql_init_query(thd);   
   LEX *lex=lex_start(thd, (uchar*) packet, length);
   lex->safe_to_cache_query= 0;
-  thd->prepare_command= TRUE; 
   thd->lex.param_count= 0;
   if (!yyparse((void *)thd) && !thd->is_fatal_error) 
     error= send_prepare_results(stmt);
